sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:19: error: '<-' expected but ')' found.
	for (n>-fin to debut){
                            ^AlgCocktailSort2:27: error: illegal start of simple expression
}while(x==true)
^